--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.technicalrj.task.Feedback"
-    android:background="#000000"
+    android:background="#002966"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -25,7 +25,7 @@
         android:layout_margin="5dp"
         android:layout_width="fill_parent"
         android:layout_height="55dp"
-        android:backgroundTint="#ff9900"
+        android:backgroundTint="#ff704d"
         android:hint="Name"
         android:inputType="textPersonName"
         android:background="@drawable/button_style"
@@ -40,7 +40,7 @@
         android:layout_height="55dp"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="#ff9900"
+        android:backgroundTint="#ff704d"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:background="@drawable/button_style"
@@ -55,7 +55,7 @@
         android:layout_height="130dp"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="#ff9900"
+        android:backgroundTint="#ff9980"
         android:gravity="top"
         android:hint="Your Message"
         android:fitsSystemWindows="true"
