--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -13,6 +13,6 @@
             android:top="1dp"
             android:bottom="1dp"/>
 
-        <solid android:color="#505050"/>
+        <solid android:color="#fff"/>
 
     </shape>
