--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,15 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.technicalrj.task.LoginActivity"
-    android:background="@drawable/back1">
+    android:background=" #66ff99">
 
 
-    <RelativeLayout
-        android:layout_width="320dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="35dp"
-        android:layout_height="460dp"
-        android:background="@drawable/back">
+
 
         <EditText
 
@@ -23,8 +18,8 @@
             android:textSize="16sp"
             android:hint="Email"
             android:layout_margin="20dp"
-            android:textColor="#F0FFFF"
-            android:textColorHint="#F0FFFF"
+            android:textColor="#000"
+            android:textColorHint="#000"
             android:inputType="textEmailAddress"
             android:maxLines="1"
             android:singleLine="true"
@@ -36,10 +31,10 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="20dp"
-            android:textColorHint="#F0FFFF"
+            android:textColorHint="#000"
             android:layout_below="@+id/name"
             android:textSize="16sp"
-            android:textColor="#F0FFFF"
+            android:textColor="#000"
             android:hint="Password"
             android:inputType="textPassword"
             android:maxLines="1"
@@ -57,8 +52,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginTop="40dp"
-            android:layout_marginLeft="90dp"
-            android:background=" #339966"
+            android:layout_marginLeft="120dp"
+            android:background="#4d94ff"
             android:fontFamily="sans-serif-light"
             android:layout_below="@+id/password"
             android:text="Log in"
@@ -73,7 +68,7 @@
             android:layout_below="@id/login"
             android:layout_margin="30dp"
             android:gravity="center"
-            android:textColor="#ffff"
+            android:textColor="#000"
             android:text="New User? Sign Up!"
             android:textSize="22sp"
             android:onClick="goSignup"/>
@@ -81,5 +76,3 @@
 
     </RelativeLayout>
 
-
-</RelativeLayout>
