--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,39 +8,42 @@
     android:background=" #66ff99">
 
 
+    <EditText
 
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignEnd="@+id/go_signup"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/go_signup"
+        android:layout_marginTop="53dp"
+        android:background="@drawable/button_style"
+        android:gravity="center"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:textColor="#000"
+        android:textColorHint="#000"
+        android:textSize="16sp" />
 
-        <EditText
-
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:textSize="16sp"
-            android:hint="Email"
-            android:layout_margin="20dp"
-            android:textColor="#000"
-            android:textColorHint="#000"
-            android:inputType="textEmailAddress"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:gravity="center"
-            android:background="@drawable/button_style"/>
-
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="20dp"
-            android:textColorHint="#000"
-            android:layout_below="@+id/name"
-            android:textSize="16sp"
-            android:textColor="#000"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:gravity="center"
-            android:background="@drawable/button_style"/>
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignEnd="@+id/name"
+        android:layout_alignStart="@+id/name"
+        android:layout_below="@+id/name"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/button_style"
+        android:gravity="center"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:textColor="#000"
+        android:textColorHint="#000"
+        android:textSize="16sp" />
 
 
 
