--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.technicalrj.task.MainActivity"
-    android:background="#1a0f00"
+    android:background="#ccccff"
 
     >
 
