--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.technicalrj.task.SecondActivity"
-    android:background="@drawable/back1">
+    android:background="@drawable/back">
 
     <Button
         android:id="@+id/logout"
@@ -15,9 +15,9 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="150dp"
         android:text="LOGOUT"
-        android:textColor="#ffff"
+        android:textColor="#000"
         android:onClick="gologout"
-        android:background="@drawable/button_style"/>
+        android:background="#f5d6eb"/>
 
     <Button
         android:id="@+id/feedback"
@@ -28,8 +28,8 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:text="FEEDBACK"
-        android:textColor="#ffff"
+        android:textColor="#000"
         android:onClick="gofeedback"
-        android:background="@drawable/button_style"/>
+        android:background="#f5d6eb"/>
 
 </RelativeLayout>
